Added cat image and a few more elements

--- a/test.html
+++ b/test.html
@@ -1,3 +1,14 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Test page</title>
+    </head>
+    <body>
 <h1>Hey. I'm big heading</h3>
-    <p>i'm paragraph element.</p>
-    <a href="http://google.com" target="_blank" title="google google google">click me! i am link!</a>
+<p>i'm <b>paragraph</b>> element.</p>
+<a href="http://google.com" target="_blank" title="google google">click me! i am link!</a>
+<p>My name is:<br>
+    Kitty Cat</p>
+<img src="cat/cat.jpeg">
+</body>
+</html>
